--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <meta name="google-site-verification" content="ZB76fGk7lEHAI5WOXqi8ZH1FL01CKOGZLz5DSm7OswM" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Minimal by Steve Smith</title>
